--- a/21_APIcard/templates/main.html
+++ b/21_APIcard/templates/main.html
@@ -1,10 +1,10 @@
 <html>
-
 <head>
     <h1> Restful Adventures</h1>
 </head>
 
 <body>
-    
-    <p> {{ explanation }}</p>
+    <h2>{{ question }}</h2>
+    <p>{{ answers }}</p>
+</body>
 </html>
